Fixed account button overflow for mobile views

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -98,6 +98,10 @@ h6 {
     margin-top: 10px;
 }
 
+.mobile-account-btn {
+    left: -150%;
+}
+
 
 /* Browse Menu */
 
